[package]
name = "zilliqa-rs"
version = "0.2.0"
edition = "2021"
description = "A Rust SDK for Zilliqa blockchain"
license = "MIT"
authors = ["Saeed Dadkhah <saeed@zilliqa.com>"]
repository = "https://github.com/zilliqa/zilliqa-rs/"
documentation = "https://docs.rs/zilliqa-rs"

[lib]
path = "src/lib.rs"

[build-dependencies]
anyhow = "1.0.75"
convert_case = "0.6.0"
scilla-parser = "1.0.0"

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.74"
bech32 = "0.9.1"
eth-keystore = "0.5.0"
hex = "0.4.3"
jsonrpsee = { version = "0.21.0", features = ["http-client", "macros"] }
k256 = "0.13.2"
primitive-types = { version = "0.12.2", features = ["serde"] }
prost = "0.12.2"
rand = "0.8.5"
regex = "1.10.2"
serde = { version = "1.0.192", features = ["derive", "rc"] }
serde-aux = "4.2.0"
serde_bytes = "0.11.12"
serde_json = { version = "1.0.108", features = ["raw_value"] }
sha2 = "0.10.8"
thiserror = "1.0.50"
tokio = { version = "1.34", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
url = "2.4.1"

[dev-dependencies]
paste = "1.0.14"
claim = "0.5"
test-context = "0.1.4"
